infra/backend/kustomize/base/kev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kev-deployment
  labels:
    app.kubernetes.io/name: kev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kev
    spec:
      containers:
        - name: kev
          image: ip999/kev:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
