infra/backend/kustomize/base/tika-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika-deployment
  labels:
    app.kubernetes.io/name: tika
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tika
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tika
    spec:
      containers:
        - name: tika
          image: apache/tika:latest
          ports:
            - containerPort: 9998
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 250m
          livenessProbe:
            httpGet:
              path: "/" # Default path, change if needed
              port: 9998 # Replace with your service port
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 30
            failureThreshold: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: "/" # Default path, change if needed
              port: 9998 # Replace with your service port
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 30
            failureThreshold: 20
            periodSeconds: 5
