infra/backend/kustomize/base/tiktoken-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiktoken-deployment
  labels:
    app.kubernetes.io/name: tiktoken
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: tiktoken
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tiktoken
    spec:
      containers:
        - name: tiktoken
          image: ip999/tiktoken
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
