infra/backend/kustomize/base/yf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yf-deployment
  labels:
    app.kubernetes.io/name: yf
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: yf
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yf
    spec:
      containers:
        - name: yf
          image: ip999/yf
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
