infra/backend/kustomize/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
  - name: backend-api-port
    protocol: TCP
    port: 3000
    targetPort: 3000
