infra/backend/kustomize/base/kev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kev-service
spec:
  selector:
    app.kubernetes.io/name: kev
  ports:
  - name: kev-api-port
    protocol: TCP
    port: 5000
    targetPort: 5000
