infra/backend/kustomize/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
