infra/backend/kustomize/base/tika-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tika-service
spec:
  selector:
    app.kubernetes.io/name: tika
  ports:
    - name: tika-api-port
      protocol: TCP
      port: 9998
      targetPort: 9998
