infra/backend/kustomize/base/yf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yf-service
spec:
  selector:
    app.kubernetes.io/name: yf
  ports:
  - name: yf-api-port
    protocol: TCP
    port: 5000
    targetPort: 5000
